--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/BattleGround.BattleGround
 EditorStartupMap=/Game/BattleGround.BattleGround
-GlobalDefaultGameMode=/Game/Blueprints/BattleTankGameMode.BattleTankGameMode_C
+GlobalDefaultGameMode=/Script/BattleTank.BattleTankGameModeBase
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
