--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -1,9 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/BattleGround.BattleGround
-EditorStartupMap=/Game/BattleGround.BattleGround
+GameDefaultMap=/Game/Maps/TheMainMenu.TheMainMenu
+EditorStartupMap=/Game/Maps/BattleGround.BattleGround
 GlobalDefaultGameMode=/Game/Blueprints/BattleTankGameMode.BattleTankGameMode_C
+bUseSplitscreen=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
